// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders with defaultProps 1`] = `
<label
  className="ax-radio ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-radio__input"
    disabled={undefined}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-radio__indicator"
  />
  <span
    className="ax-radio__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`RadioButton renders with disabled 1`] = `
<label
  className="ax-radio ax-radio--disabled ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-radio__input"
    disabled={true}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-radio__indicator"
  />
  <span
    className="ax-radio__label"
  >
    Lorem ipsum
  </span>
</label>
`;

exports[`RadioButton renders with invalid 1`] = `
<label
  className="ax-radio ax-radio--invalid ax-space--x2"
  onClick={undefined}
  title={undefined}
>
  <input
    checked={undefined}
    className="ax-radio__input"
    disabled={undefined}
    name={undefined}
    type="radio"
  />
  <span
    className="ax-radio__indicator"
  />
  <span
    className="ax-radio__label"
  >
    Lorem ipsum
  </span>
</label>
`;
